@@ -5,6 +5,10 @@ Revision history for Net::DNS
 =============================
 *** NOT RELEASED YET
 
+Fix rt.cpan.org #34511
+    Priming query logic contained unneeded recursion. 
+    Now also fals back to hardcoded hints if there are no nameservers whatsoever.
+
 Fix rt.cpan.org #38390 and 37089
     Added CD and AD bit control to the resolver.
 
